<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".activities.TwitterActivity">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="Twitter Downloader"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box_rectangle"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_rectangle"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="8dp"
                android:text="@string/message"
                android:textColor="@color/black"
                android:textSize="24dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/editTxtTF"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/input_box"
                        android:elevation="4dp"
                        android:hint="Paste the video url here"
                        android:inputType="textUri"
                        android:paddingLeft="16dp"
                        android:textSize="14sp"

                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <Button
                android:id="@+id/btnDownloadTF"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="8dp"
                android:background="@drawable/download_button"
                android:gravity="center"
                android:text="@string/download"
                android:textColor="@color/white"
                android:textSize="10dp" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/downloadingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:visibility="gone"

        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="12dp"


                >

                <TextView
                    android:id="@+id/fileDownloadingTxtTF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/down_msg"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/progresslinera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp">

                <ProgressBar
                    android:id="@+id/progressBarTF"
                    style="?android:progressBarStyleHorizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:progressDrawable="@drawable/custom_progress_bg"

                    />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/progresstextlinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="16dp"


                >

                <TextView
                    android:id="@+id/percentageTA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="60 %"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#C1ECFF" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>